Fixed bug with cached period service. Some accrual ui changes.